--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,14 @@ body {
 .animate-scroll-left {
   animation: scroll-left 30s linear infinite;
 }
+
+/* Hide scrollbar for Chrome, Safari */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
